Fixes readability of posts
Makes the text a little smaller and I think makes it look a little better.
Also the post text will now shink with the device so you don't have
to scroll sideways.

--- a/static/css/detail_page.css
+++ b/static/css/detail_page.css
@@ -1,5 +1,5 @@
 .entire-page{
-  width: 850px;
+  max-width: 900px;
 }
 
 /* text container on top of landing page */
@@ -24,7 +24,8 @@ img{
 }
 
 .main-text{
-  font-size: 1.3em;
+  font-size: 1.1em;
+  word-spacing: 1.2;
 }
 
 /*Style for the horizontal bar */
